# tictactoe

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  game_logic.cpp  game_logic.h  game_state.cpp  game_state.h  main.cpp
display_backend/: backend.h  raylib_display_backend.cpp  raylib_display_backend.h
utils/: minimax.cpp  minimax.h  vector2d.cpp  vector2d.h
